--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
+    "compression": "^1.7.2",
     "express": "^4.16.2",
+    "get-folder-size": "^1.0.1",
+    "md5": "^2.2.1",
     "moment": "^2.20.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "ws": "^4.1.0"
   }
 }
